5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1592_1804.log
== TEST (2019-05-06 13:30:22) 
-- CODE:
xa = float(input("xa: "))
ya = float(input("ya: "))
xb = float(input("xb: "))
yb = float(input("yb: "))
dab = sqrt((xb-xa)**2 + (yb-ya)**2)
print(round(dab, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dab = sqrt((xb-xa)**2 + (yb-ya)**2)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 13:30:51) 
-- CODE:
xa = float(input("xa: "))
ya = float(input("ya: "))
xb = float(input("xb: "))
yb = float(input("yb: "))
from math import*
dab = sqrt((xb-xa)**2 + (yb-ya)**2)
print(round(dab, 3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-06 13:31:14) 
-- CODE:
xa = float(input("xa: "))
ya = float(input("ya: "))
xb = float(input("xb: "))
yb = float(input("yb: "))
from math import*
dab = sqrt((xb-xa)**2 + (yb-ya)**2)
print(round(dab, 3))
-- EXECUTION TIME:
0.206743
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
